--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
           </div>
           <ul class="card__listContainer">
-            <li class="card_listItem">lorem</li>
-            <li class="card_listItem">ipsum</li>
+            <li class="card__listItem">lorem</li>
+            <li class="card__listItem">ipsum</li>
           </ul>
         </section>
 
@@ -81,7 +81,7 @@
               <img class="card__img" src="img.jpg">
             </div>
           </div>
-          <ul>
+          <ul class="card__listContainer">
             <li class="card__listItem">lorem</li>
             <li class="card__listItem">ipsum</li>
             <li class="card__listItem">dolor</li>
